# aboutme

./: README.md  lincs.html
programming/C++/AandDS/: main.cpp  main2.cpp
programming/C++/container/: BucketStoragee.h  bucket_storage.hpp
programming/C++/minesweeper/: cellwidget.cpp  cellwidget.h  gameboard.cpp  gameboard.h  gamesettingsdialog.cpp  gamesettingsdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  minesweeper.pro  minesweeper_en_EN.qm  minesweeper_en_EN.ts  minesweeper_fr_FR.qm  minesweeper_fr_FR.ts  minesweeper_ru_RU.qm  minesweeper_ru_RU.ts  resourses_picture.qrc  translator1.qrc
programming/C++/quaternion/: quat.hpp  tests.cpp
programming/C/fftw/: checkException.c  checkException.h  crossCorrelation.c  crossCorrelation.h  main.c  openingData.c  openingData.h
programming/C/floatingPoint/: CMakeLists.txt  check.c  cream.py  main.c  stress_test.py  tester.c  tests.py
programming/C/floatingPoint/source/: FloatTests.txt  HalfTests.txt  TEST_FLOAT_div_mult.txt  true_gen_float_+-_tests.tsv  true_gen_float_div_tests.tsv  true_gen_float_mult_tests.tsv
programming/C/floatingPoint/suite/: __init__.py  asserts.py  config.py  results.py  tester.py  tests.py
programming/Discrete Math/: DM.py  DM_vt.py  dmlab.py  main.py
programming/Discrete Math/DM_Lab1_Sem4/: CMakeLists.txt  Task1  Task1.cpp  Task2  Task2.cpp  Task3  Task3.cpp  Task4  Task4.cpp  Task5  Task5.cpp  Task6  Task6.cpp  Task7  Task7.cpp  Task8  Task8.cpp  Task9  Task9.cpp
programming/Discrete Math/MT/: aplusb.out  convert.py  (+1 more)
programming/Java/: pullSourse.bash  pullTests.bash  push.bash
(+553 files in other folders)
